This this the changelog file for the Pothos GUI toolkit.

Release 0.6.0 (pending)
==========================

- Added stack trace points and dump for evaluator lockup
- Infer toggle button for boolean type property edit widgets
- Added lockable feature to graph editor to prevent edits
- Added CheckBox and ToggleButton edit widgets for booleans

Release 0.5.2 (pending)
==========================

- Added missing cmath header to GraphConnection.cpp
- Skip disabled blocks when exporting the topology to JSON

Release 0.5.1 (2017-06-09)
==========================

- Added missing functional include for std::bind() usage
- Reduce use of local variables in graph editor export
- Reliable ordering for lists of saved graph objects
- Save selected tab and tab order when selected/moved
- Fix auto-activate when the graph editor not visible
- Layout tweaks for dimension spinbox on DTypeChooser
- Fix DTypeChooser config parsing for keyword options
- Graph editor update activate topology button on toggle
- Fix graph properties panel config options for older Qt

Release 0.5.0 (2017-04-27)
==========================

- Added automatic activate option for saved topologies
- Require 0.5.0 Pothos framework for DocUtil and BlockEval
- Switch over to Qt classes for JSON, time, processes, etc...
- Parameter edit mode to switch between default and line entry
- Finer grained connection management in Topology evaluator
- Support for querying and applying block description overlays

Release 0.4.4 (2017-03-03)
==========================

- Fixed extra context menu when moving objects between pages
- Fixed moving blocks with multiple signal/slot connections
- Disable insert graph widgets menu when no widgets available
- Added missing directory option to the FileEntry edit widget
- Fix editable combo box detection for returnPressed() event

Release 0.4.3 (2017-01-26)
==========================

- Fix possible "drag leave received" warning in GraphDraw