@@ -2,7 +2,7 @@
 # Project setup
 ########################################################################
 cmake_minimum_required(VERSION 2.8.9)
-project(PothosGui CXX)
+project(PothosFlow CXX)
 
 if(${CMAKE_PROJECT_NAME} STREQUAL ${PROJECT_NAME})
     find_package(Pothos "0.5.0" CONFIG REQUIRED)
@@ -59,9 +59,9 @@ endif()
 ########################################################################
 include(FeatureSummary)
 include(CMakeDependentOption)
-cmake_dependent_option(ENABLE_GUI "Enable Pothos GUI component" ON "Pothos_FOUND;Qt5Widgets_FOUND;Qt5Concurrent_FOUND" OFF)
-add_feature_info(GUI ENABLE_GUI "GUI designer tool for the Pothos framework")
-if (NOT ENABLE_GUI)
+cmake_dependent_option(ENABLE_FLOW "Enable Pothos Flow component" ON "Pothos_FOUND;Qt5Widgets_FOUND;Qt5Concurrent_FOUND" OFF)
+add_feature_info(Flow ENABLE_FLOW "GUI designer tool for the Pothos framework")
+if (NOT ENABLE_FLOW)
     return()
 endif()
 
@@ -102,8 +102,8 @@ list(APPEND SOURCES ${RESOURCES_QRC})
 # Resource file - adds an icon to Pothos GUI executable
 ########################################################################
 if (WIN32)
-    set(ICON_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/icons/PothosGui.ico)
-    set(RES_FILES "${CMAKE_CURRENT_BINARY_DIR}/PothosGui.rc")
+    set(ICON_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/icons/PothosFlow.ico)
+    set(RES_FILES "${CMAKE_CURRENT_BINARY_DIR}/PothosFlow.rc")
     file(WRITE "${RES_FILES}" "id ICON \"${ICON_SOURCE}\"")
     set(CMAKE_RC_COMPILER_INIT windres)
     enable_language(RC)
@@ -113,7 +113,7 @@ if (WIN32)
 endif (WIN32)
 
 if (APPLE)
-    set(ICON_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/icons/PothosGui.icns)
+    set(ICON_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/icons/PothosFlow.icns)
     set_source_files_properties(${ICON_SOURCE}
         PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
     list(APPEND SOURCES ${ICON_SOURCE})
@@ -123,7 +123,7 @@ endif (APPLE)
 # sources list
 ########################################################################
 list(APPEND SOURCES
-    PothosGui.cpp
+    PothosFlow.cpp
 
     MainWindow/MainWindow.cpp
     MainWindow/MainActions.cpp
@@ -204,47 +204,47 @@ set(BUNDLE_DESTINATION bin CACHE STRING "OSX bundle destination")
 #under MSVC build a win32 app so a console is not launched with the GUI exe
 if (MSVC)
     set(CMAKE_EXE_LINKER_FLAGS "/entry:mainCRTStartup ${CMAKE_EXE_LINKER_FLAGS}")
-    add_executable(PothosGui WIN32 ${SOURCES})
+    add_executable(PothosFlow WIN32 ${SOURCES})
 
 #under OSX build a bundle so the menu integration works properly
 #this also creates a launcher with an icon when opened in finder
 elseif (APPLE)
-    add_executable(PothosGui MACOSX_BUNDLE ${SOURCES})
+    add_executable(PothosFlow MACOSX_BUNDLE ${SOURCES})
     string(TIMESTAMP Pothos_BUNDLE_VERSION "%Y.%m.%d")
-    set_target_properties(PothosGui PROPERTIES
+    set_target_properties(PothosFlow PROPERTIES
         MACOSX_BUNDLE TRUE
         MACOSX_BUNDLE_INFO_STRING "Graphical designer for the Pothos data-flow framework"
-        MACOSX_BUNDLE_BUNDLE_NAME "PothosGui"
+        MACOSX_BUNDLE_BUNDLE_NAME "PothosFlow"
         MACOSX_BUNDLE_BUNDLE_VERSION "${Pothos_BUNDLE_VERSION}"
         MACOSX_BUNDLE_LONG_VERSION_STRING "${Pothos_VERSION}"
         MACOSX_BUNDLE_SHORT_VERSION_STRING "${Pothos_VERSION_MAJOR}.${Pothos_VERSION_MINOR}.${Pothos_VERSION_PATCH}"
-        MACOSX_BUNDLE_GUI_IDENTIFIER "com.pothosware.pothosgui"
-        MACOSX_BUNDLE_ICON_FILE "PothosGui.icns"
-        MACOSX_BUNDLE_COPYRIGHT "Copyright (c) 2013-2016 Josh Blum"
+        MACOSX_BUNDLE_GUI_IDENTIFIER "com.pothosware.pothosflow"
+        MACOSX_BUNDLE_ICON_FILE "PothosFlow.icns"
+        MACOSX_BUNDLE_COPYRIGHT "Copyright (c) 2013-2017 Josh Blum"
     )
-    #provide PothosGui command line script which calls into the bundle
+    #provide PothosFlow command line script which calls into the bundle
     set(ABSOLUTE_BUNDLE_DESTINATION ${BUNDLE_DESTINATION})
     if (NOT IS_ABSOLUTE "${BUNDLE_DESTINATION}")
         set(ABSOLUTE_BUNDLE_DESTINATION ${CMAKE_INSTALL_PREFIX}/${BUNDLE_DESTINATION})
     endif ()
     configure_file(
-        ${CMAKE_CURRENT_SOURCE_DIR}/PothosGuiOSX.sh
-        ${CMAKE_CURRENT_BINARY_DIR}/PothosGui @ONLY)
-    install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/PothosGui DESTINATION bin)
+        ${CMAKE_CURRENT_SOURCE_DIR}/PothosFlowOSX.sh
+        ${CMAKE_CURRENT_BINARY_DIR}/PothosFlow @ONLY)
+    install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/PothosFlow DESTINATION bin)
 
 #otherwise build a standard UNIX style executable
 else ()
-    add_executable(PothosGui ${SOURCES})
+    add_executable(PothosFlow ${SOURCES})
     add_subdirectory(Desktop) #freedesktop.org
 endif ()
 
-target_link_libraries(PothosGui ${Pothos_LIBRARIES})
+target_link_libraries(PothosFlow ${Pothos_LIBRARIES})
 
 install(
-    TARGETS PothosGui
+    TARGETS PothosFlow
     BUNDLE DESTINATION ${BUNDLE_DESTINATION}
     RUNTIME DESTINATION bin
-    COMPONENT pothos_gui
+    COMPONENT pothos_flow
 )
 
 ########################################################################
