@@ -3,6 +3,7 @@ This this the changelog file for the Pothos GUI toolkit.
 Release 0.6.0 (pending)
 ==========================
 
+- Renamed the project repo from pothos-gui to PothosFlow
 - Added stack trace points and dump for evaluator lockup
 - Infer toggle button for boolean type property edit widgets
 - Added lockable feature to graph editor to prevent edits
